syntax = "proto3";
option go_package = "./proto";

message OperatorAddReq {
    string account = 1;
    string password = 2;
    int32 projectId = 3;
    string namespace = 4;
}

message OperatorAddResp {
}


message OperatorEditReq {
    string account = 1;
    string password = 2;
    int64 id = 3;
    string namespace = 4;
    int32 projectId = 5;
}

message OperatorEditResp {
}

message OperatorListReq {
    int64 page = 1;
    int64 pageSize = 2;
    string account = 3;
    string namespace = 4;
    int32 projectId = 5;
}

message OperatorInfo {
	int64 id                   = 1; 
	string username            = 2;
	repeated int64 permissions = 3;
	string createTime          = 4;
}

message OperatorListResp {
	int64 page        = 1;
	int64 pageSize    = 2;
	int64 totalPage   = 3;
	int64 totalCount  = 4;
	repeated OperatorInfo list = 5;
}

service Operator {
    rpc Add(OperatorAddReq) returns (OperatorAddResp) {}
    rpc Edit(OperatorEditReq) returns (OperatorEditResp) {}
    rpc List(OperatorListReq) returns (OperatorListResp) {}
}
